# worktree-manager

./: .gitignore  02-PRD.md  03-技术方案.md  06-回归测试报告.md  07-自动更新方案.md  CHANGELOG.md  CLAUDE.md  README.md  README_EN.md  RELEASE-GUIDE.md  install.ps1  install.sh
.github/workflows/: ci.yml  release.yml  update-tap.yml
code/: package-lock.json  package.json  vite.config.ts
code/docs/: 05-测试报告.md
code/docs/bugs/: .gitkeep  BUG-001-open-worktree-command-missing.md  BUG-002-detached-head-status-missing.md  BUG-003-input-validation-missing.md  BUG-004-csp-not-configured.md
code/src/: App.tsx  vite-env.d.ts
code/src-tauri/: Cargo.toml  tauri.conf.json
code/src-tauri/icons/: icon.icns
code/src-tauri/src/: lib.rs
code/src-tauri/src/commands/: worktree.rs
code/src-tauri/src/models/: worktree.rs
code/src-tauri/src/services/: git_service.rs
code/src/components/BatchActions/: index.tsx
code/src/components/BranchManager/: index.tsx
code/src/components/DiffSidebar/: index.tsx
code/src/components/HintsPanel/: index.tsx
code/src/components/SettingsPanel/: index.tsx
code/src/components/Sidebar/: index.tsx
code/src/components/UpdateDialog/: index.tsx
code/src/components/WorktreeList/: WorktreeItem.tsx  index.tsx
code/src/components/layout/: Header.tsx
code/src/hooks/: useKeyboardShortcuts.ts
code/src/services/: git.ts
code/src/stores/: index.ts  repositoryStore.ts  updateStore.ts
code/src/types/: worktree.ts
